--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,8 @@ requirements:
   run:
     - jinja2 >=3.1
     - jsonschema
-    - jupyter-core>=4.7.1
+    - jupyter-core >=4.7.1
+    - python >=3.8
 
 test:
   imports:
